2007-04-24  Andreas Krebbel  <krebbel1@de.ibm.com>

	* gas/s390/zarch-z9-ec.d: Add pfpo, ectg and csst.
	* gas/s390/zarch-z9-ec.s: Likewise.

2007-04-23  Nathan Sidwell  <nathan@codesourcery.com>

	* gas/m68k/br-isaa.s: New.
	* gas/m68k/br-isaa.d: New.
	* gas/m68k/br-isab.s: New.
	* gas/m68k/br-isab.d: New.
	* gas/m68k/br-isac.s: New.
	* gas/m68k/br-isac.d: New.
	* gas/m68k/all.exp: Adjust.

2007-04-21  Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/arch4t.d: Convert to unified syntax.
	* gas/arm/archv6.d: Likewise.
	* gas/arm/archv6t2.d: Likewise.
	* gas/arm/arch3.d: Likewise.
	* gas/arm/arch7dm.d: Likewise.
	* gas/arm/arch7t.d: Likewise.
	* gas/arm/archv1.d: Likewise.
	* gas/arm/copro.d: Likewise.
	* gas/arm/inst.d: Likewise.
	* gas/arm/macro1.d: Likewise.
	* gas/arm/tcompat.d: Likewise.
	* gas/arm/wince_inst.d: Likewise.
	* gas/arm/xscale.d: Likewise.

	* gas/arm/thumb.d: White space cleanup.
	* gas/arm/thumb2_relax.d: Likewise.
	* gas/arm/thumb32.d: Likewise.
	
2007-04-20  Nathan Sidwell  <nathan@codesourcery.com>

	* gas/m68k/ctrl-1.d, gas/m68k/ctrl-1.s: New.
	* gas/m68k/ctrl-2.d, gas/m68k/ctrl-2.s: New.
	* gas/m68k/all.exp: Add them.

2007-04-20  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/range64.s: New.
	* gas/ppc/range64.l: New.
	* gas/ppc/range.s: New.
	* gas/ppc/range.l: New.
	* gas/ppc/ppc.exp (run_list_test): New.  Use to run new tests.

2007-04-20  Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/mapshort.s: Add a small .data section.
	* gas/arm/mapshort-eabi.d: Check the data section doesn't confuse
	disassembly.
	* gas/arm/mapshort-elf.d: Likewise.

2007-04-19  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb1_unified.d: New test.
	* gas/arm/thumb1_unified.s: New test.

2007-04-19  Nathan Froyd <froydnj@codesourcery.com>

	* gas/ppc/booke.s: Add tlbsx, tlbsxe.
	* gas/ppc/booke.d: Update.

2007-04-18  H.J. Lu <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Add sse4.2 and x86-64-sse4.2.

	* gas/i386/sse4_2.d: New file.